package User;

public abstract class Person {
    private String name;
    private String email;
}